fixed alignment of content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
         header, main, footer {
-      	padding-left: 300px;
+      	padding-left: 250px;
     	}
 
     	@media only screen and (max-width : 992px) {
